@@ -13,6 +13,9 @@
 				<a href="#ReleaseNotesforSirius">Release Notes for Sirius</a>
 				<ol style="list-style: disc;">
 					<li>
+						<a href="#sirius6.1.5">Changes in Sirius 6.1.5</a>
+					</li>
+					<li>
 						<a href="#sirius6.1.4">Changes in Sirius 6.1.4</a>
 						<ol style="list-style: disc;">
 							<li>
@@ -115,6 +118,8 @@
 		<p>This document contains the release notes for recent major releases of Sirius. See also 
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
+		<h2 id="sirius6.1.5">Changes in Sirius 6.1.5</h2>
+		<p>None.</p>
 		<h2 id="sirius6.1.4">Changes in Sirius 6.1.4</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
