@@ -11,8 +11,122 @@
 		<p>This document lists the changes in 
 			<code>TranslatableMessage</code> used for Sirius internationalization in each Sirius version.
 		</p>
-		<h2 id="sirius61">Translation Keys Changes in Sirius 6.1 (from Sirius 6.0)</h2>
+		<h2 id="sirius614">Translation Keys Changes in Sirius 6.1.4 (from Sirius 6.1.3)</h2>
 		<h3 id="MessageKeysAdded">Message Keys Added</h3>
+		<ul>
+			<li>
+				<code>org.eclipse.sirius.diagram.elk.debug.Messages.ExportToElkGraphHandler_elkExportDialogMessage</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.elk.debug.Messages.ExportToElkGraphHandler_elkExportDialogNoAssociatedLayoutMessage</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.elk.debug.Messages.ExportToElkGraphHandler_elkExportDialogTitle</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.BundledImageShape_idMissing</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.BundledImageShape_usedByEndUser_idMissing_msg</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.BundledImageShape_usedInVSM_idMissing_msg</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.LabelOnBorderMigrationParticipant_labelsModified</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.LabelOnBorderMigrationParticipant_title</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.SVGFigure_usingInvalidBundledImageShape</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_optionTargetColumnLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_targePortLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_targetEdgeLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_targetLabelLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_targetNodeLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_targetParentLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_typeBooleanLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_typeDoubleLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_typeEnumLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_typeEnumSetLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_typeIntegerLabel</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.editor.Messages.OptionOverrideEditorDialog_typeStringLabel</code>
+			</li>
+		</ul>
+		<h3 id="MessageKeysRemoved">Message Keys Removed</h3>
+		<p>None.</p>
+		<h2 id="sirius613">Translation Keys Changes in Sirius 6.1.3 (from Sirius 6.1.2)</h2>
+		<h3 id="MessageKeysAdded2">Message Keys Added</h3>
+		<ul>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.SiriusDiagramActionBarContributor_showElement</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.viewpoint.Messages.RefreshHelper_notNullPredicate</code>
+			</li>
+		</ul>
+		<h3 id="MessageKeysRemoved2">Message Keys Removed</h3>
+		<p>None.</p>
+		<h2 id="sirius612">Translation Keys Changes in Sirius 6.1.2 (from Sirius 6.1.1)</h2>
+		<h3 id="MessageKeysAdded3">Message Keys Added</h3>
+		<ul>
+			<li>
+				<code>org.eclipse.sirius.diagram.sequence.Messages.VerticalSpaceReduction_operationName</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DDiagramEditorImpl_diagramRefreshTitle</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DDiagramEditorImpl_shouldWeRefreshQuestion</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DiagramDialectUIServices_exportedDiagramImageClassCastError</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.RemoveBlankSpace_cmdName</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.Messages.SynchronizeGMFModelCommand_label</code>
+			</li>
+		</ul>
+		<h3 id="MessageKeysRemoved3">Message Keys Removed</h3>
+		<ul>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.SynchronizeGMFModelCommand_label</code>
+			</li>
+		</ul>
+		<h2 id="sirius611">Translation Keys Changes in Sirius 6.1.1 (from Sirius 6.1.0)</h2>
+		<h3 id="MessageKeysAdded4">Message Keys Added</h3>
+		<p>None.</p>
+		<h3 id="MessageKeysRemoved4">Message Keys Removed</h3>
+		<p>None.</p>
+		<h2 id="sirius61">Translation Keys Changes in Sirius 6.1.0 (from Sirius 6.0)</h2>
+		<h3 id="MessageKeysAdded5">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.common.ui.Messages.MigrationUIUtil_askToSaveChanges</code>
@@ -132,7 +246,7 @@
 				<code>org.eclipse.sirius.viewpoint.Messages.TechnicalUidMigrationParticipant_message</code>
 			</li>
 		</ul>
-		<h3 id="MessageKeysRemoved">Message Keys Removed</h3>
+		<h3 id="MessageKeysRemoved5">Message Keys Removed</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.LayoutingModeSwitchingAction_activate</code>
@@ -151,7 +265,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius60">Translation Keys Changes in Sirius 6.0 (from Sirius 5.1)</h2>
-		<h3 id="MessageKeysAdded2">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded6">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DiagramGeneralPreferencePage_sizeGroupLabel</code>
@@ -334,7 +448,7 @@
 				<code>org.eclipse.sirius.viewpoint.Messages.ModelingModelProvider_satusUnsavedDataWillBeLost</code>
 			</li>
 		</ul>
-		<h3 id="MessageKeysRemoved2">Message Keys Removed</h3>
+		<h3 id="MessageKeysRemoved6">Message Keys Removed</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.DiagramGeneralPreferencePage_scaleDiagramOnExport</code>
@@ -365,7 +479,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius51">Translation Keys Changes in Sirius 5.1 (from Sirius 5.0)</h2>
-		<h3 id="MessageKeysAdded3">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded7">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.diagram.sequence.Messages.Range_wrongArgument</code>
@@ -515,7 +629,7 @@
 				<code>org.eclipse.sirius.viewpoint.Messages.SessionFactoryImpl_ResourceTypeErrorMsg</code>
 			</li>
 		</ul>
-		<h3 id="MessageKeysRemoved3">Message Keys Removed</h3>
+		<h3 id="MessageKeysRemoved7">Message Keys Removed</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.viewpoint.provider.Messages.DeleteRepresentationAction_message</code>
@@ -531,7 +645,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius50">Translation Keys Changes in Sirius 5.0 (from Sirius 4.1)</h2>
-		<h3 id="MessageKeysAdded4">Message Keys Added</h3>
+		<h3 id="MessageKeysAdded8">Message Keys Added</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.common.acceleo.aql.business.Messages.AQLInterpreter_errorWithExpression</code>
@@ -924,7 +1038,7 @@
 				<code>org.eclipse.sirius.viewpoint.Messages.SessionInterpreter_evaluationError</code>
 			</li>
 		</ul>
-		<h3 id="MessageKeysRemoved4">Message Keys Removed</h3>
+		<h3 id="MessageKeysRemoved8">Message Keys Removed</h3>
 		<ul>
 			<li>
 				<code>org.eclipse.sirius.editor.properties.Messages.ImportingDefaultPropertiesViewDescriptionCommand_text</code>
