@@ -4,6 +4,10 @@ h1. Release Notes for Sirius
 
 This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.
 
+h2(#sirius6.1.5). Changes in Sirius 6.1.5
+
+None.
+
 h2(#sirius6.1.4). Changes in Sirius 6.1.4
 
 h3. User-Visible Changes
